# ros_code

./: pub.py  silicon_chip_ros2
Obstacle Detection and avoidance sim./: laser_simulator.py  movement_controller.py  obstacle_detector.py  package.xml  parameter_server.py  setup.py  status_logger.py
Temperature Monitor/: climate_controller.py  package.xml  setup.py  temperature_evaluator.py  temperature_filter.py  temperature_logger.py  temperature_sensor.py
Turtle ROS2/: reset.py  turtle  turtle_cleaner.py  turtle_creator.py  turtle_logger.py
launch/: smart_temp_launch.py
lidar_avoidance/src/lidar_avoidance/: package.xml  setup.py
lidar_avoidance/src/lidar_avoidance/lidar_avoidance/: __init__.py  lidar_avoid.py
ros2_comms/: add_two_ints_client.py  add_two_ints_server.py  listener_node.py  package.xml  parameter_node.py  setup.py  talker_node.py
ros2_ws/src/turtlebot_controller/: package.xml  setup.py
ros2_ws/src/turtlebot_controller/turtlebot_controller/: teleop_node.py
