<?xml version="1.0"?>
<package format="3">
  <name>obstacle_avoidance_sim</name>
  <version>0.0.1</version>
  <description>A basic obstacle avoidance simulation using ROS 2 nodes.</description>

  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
