<?xml version="1.0"?>
<package format="3">
  <name>ros2_comms_demo</name>
  <version>0.0.0</version>
  <description>A ROS2 demo package with publisher, subscriber, service, client, and parameter nodes.</description>

  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>example_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
