<?xml version="1.0"?>
<package format="3">
  <name>lidar_avoidance</name>
  <version>0.1.0</version>
  <description>LiDAR-based obstacle avoidance for robots</description>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
